fix: word-break in multiline inputs

--- a/src/modules/General/components/Input/index.module.scss
+++ b/src/modules/General/components/Input/index.module.scss
@@ -67,6 +67,7 @@
         width: 100%;
         height: 100% !important;
         overflow-y: auto !important;
+        overflow-wrap: break-word;
 
         &::placeholder {
             color: $color-grey-500;
